# drme

./: .gitignore  CMakeLists.txt  Makefile  README.md  atomic_gbm.cpp  gbm_allocator.cpp  gbm_allocator.h  gbm_atomic.cpp  legacy.cpp  meson.build  shm_atomic.cpp
examples/: gbm_allocator.cpp  gl_wrap.h  legacy.cpp  mesa_gbm_demo.cpp  meson.build  shm_allocator.cpp  shm_allocator.h
labdrm/: drm_backend.cpp  drm_backend.h  meson.build
src/: drme.cpp  meson.build
